# SD-MSCF-DET

./: .gitattributes  .gitignore  README.md  pyproject.toml  train.py
configs/: SD-MSCF-DET.yaml  data.yaml
ultralytics/: __init__.py
ultralytics/cfg/: default.yaml
ultralytics/data/: dataset.py  multimodal_augment.py  utils.py
ultralytics/engine/: model.py
ultralytics/models/: __init__.py
ultralytics/models/utils/multimodal/visualize_core/: plugins.py  preprocessor.py  renderer.py  saver.py
ultralytics/models/yolo/: __init__.py  model.py
ultralytics/models/yolo/multimodal/: __init__.py  cocoval.py
ultralytics/models/yolo/multimodal/segment/: __init__.py
ultralytics/models/yolo/multimodal/visualize/: feature.py  heatmap.py  manager.py
ultralytics/nn/: tasks.py
ultralytics/nn/Neck/: __init__.py  auxiliary.py  neck_variants.py
ultralytics/nn/extraction/: __init__.py  c2psa_base.py  c2psa_variants.py  c3k2_base.py  c3k2_variants.py
ultralytics/nn/mm/: __init__.py  parser.py  router.py
ultralytics/nn/modules/: __init__.py  head.py  sd_mscf.py
ultralytics/nn/modules/fusion/: __init__.py  iia.py  sefn.py
ultralytics/nn/public/: __init__.py
ultralytics/utils/: loss.py  tal.py  torch_utils.py
