[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-mscf-det"
version = "0.1.0"
description = "SD-MSCF-DET multimodal object detection research code"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "einops>=0.7.0",
    "matplotlib>=3.3.0",
    "numpy>=1.23.0",
    "opencv-python>=4.6.0",
    "pandas>=1.1.4",
    "pillow>=7.1.2",
    "psutil>=5.8.0",
    "py-cpuinfo>=9.0.0",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "seaborn>=0.11.0",
    "timm>=1.0.20",
    "torch>=1.8.0",
    "torchvision>=0.9.0",
    "tqdm>=4.64.0",
    "ultralytics-thop>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["ultralytics*"]

[tool.setuptools.package-data]
ultralytics = ["cfg/*.yaml"]
